--- a/misc/folder.html
+++ b/misc/folder.html
@@ -90,7 +90,8 @@
     <details class="folder">
         <summary>miscellaneous images</summary>
         <ul>
-            <li><a href="folder/images/oldnowhere.gif">oldnowhere</a>: the old button that fit with the old dark style of the site.</li>
+            <li><a href="folder/images/nowhere1.gif">old button 1</a>: the old button that fit with the old dark style and font of the site.</li>
+            <li><a href="folder/images/nowhere2.gif">old button 2</a>: another old button now with a light theme, but still the old font.</li>
             <li><a href="folder/images/dingus.png">dingus</a>: an old version of the dingus image used in the <a href="/website/about">about me</a> page.</li>
             <li><a href="folder/images/monsuta.png">monsuta</a>: i originally put this in the blender page upstairs, but the contrast sucked so i took it out. now it's here.</li>
             <li><a href="folder/images/square.png">square</a>: another thing from the blenders, this time removed because it messed up the spacing.</li>
