--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
         color: var(--black);
         
         font-family: 'Work Sans', sans-serif; 
-        font-size: 1rem;
-        line-height: 1.2;}
-        h1{font-weight: normal;}
+        font-size: 1.125rem;
+        line-height: 1.2;
+        margin: 16px}
+        h1{font-weight: normal; margin: 0; font-size: min(6.5vw, 2.9rem)}
         </style></head>
 
     <body>
