--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p>Hi. The site is under construction again because it lacks personality.<br>
         It will come back eventually. Or it may not. I don't know.<br>
         Patience is a virtue.</p><br>
-        <img src="laydown.jpg" style="max-width: 800px">
+        <img src="laydown.jpg" style="width: 400px; max-width: 100%">
 
     </body>
 </html>
