--- a/index.html
+++ b/index.html
@@ -3,33 +3,30 @@
     <head>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <title>nowhere.</title>
-        <style>
-
-        body{
-        --white: #f0f0f0;
-        --black: #101010;
-        --gray:  #808080;
-        
-        background-color: var(--white);
-        color: var(--black);
-        
-        font-family: 'Work Sans', sans-serif; 
-        font-size: 1.125rem;
-        line-height: 1.2;
-        margin: 16px}
-        h1{font-weight: 500; margin: 0; font-size: min(6.5vw, 2.9rem)}
+        <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
+        <title>nowhere in particular</title><style>
         </style></head>
 
-    <body>
+    <body><div class="main">
+        <h1>nowhere in particular...</h1>
+        <p>Oh hey, someone's here, welcome!<br>
+        There's nothing here right now, like there used to be.<br>
+        The webmaster's not really feeling like putting it all back where it used to be so this is 
+        more emphasis on the "nowhere" for now...<br>
+        But right now it's being used as a place for them to put some stuff they made in blender.<br>
+        If you wanna check them out, that's cool. If you don't, that's cool too. Fair even.
+        And if you want to contact the webmaster, here's their contacts. And their latest status.cafe too.</p>
+        <details><summary><a>contacts</a></summary>
+        <ul>
+            <li><b>discord: </b>cvni81#4837</li>
+            <li><b>email: </b>cvni1981@gmail.com</li>
+        </ul></details>
+        <details><summary><a>current status</a></summary>
+            <div id="entry" style="margin: 8px 20px 16px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div></details>
 
-        <h1>NOWHERE<br><s style="text-decoration-color: var(--gray);">IN PARTICULAR</s></h1>
-        <p>Hi. The site is under construction again because it lacks personality.<br>
-        It will come back eventually. Or it may not. I don't know.<br>
-        Patience is a virtue.</p><br>
-        <img src="laydown.jpg" style="width: 400px; max-width: 100%">
+        <h2><a href="blender" style="text-decoration: none;">blender</a></h2>
 
-    </body>
+    </div></body>
 </html>
