fixed some links

--- a/blender.html
+++ b/blender.html
@@ -10,7 +10,7 @@
         </style></head>
     <body><div class="main">
         <h1>stuff made in blender</h1>
-        <a href="">go back</a>
+        <a href="/website/">go back</a>
         <p>Hi! These are (most) of the things i've done in blender over the last while.<br>
         The original files are 1920x1080 (bigger even than my own display lol), so they're
         800x450 to save your precious bandwidth at least a little bit.<br>
