--- a/about.html
+++ b/about.html
@@ -15,20 +15,28 @@
 
     <body><div class="main">
         <h1>about the webmaster</h1>
+        <a href="/website/">go back</a>
         
         <div class="about">
-            <div style="display: flex"><img src="dingus.png" alt="dingus" style="align-self: center; border-radius: 100%"></div>
+            <div style="display: flex"><img src="misc/folder/images/dingus.jpg" alt="dingus" style="align-self: center; border-radius: 100%"></div>
             <div>
             <b>cvni81</b>
             <ul style="margin-top: 0px">
-                <li><b>i speak:</b> pt-br, en, <a href="https://en.wikipedia.org/wiki/Toki_Pona" class="small">tok</a></li>
+                <li><b>i speak:</b> pt-br, en, <a href="https://en.wikipedia.org/wiki/Toki_Pona">tok</a></li>
                 <li><b>pronouns:</b> they/them</li>
                 <li><b>age:</b> under 18</li>
-                <li><b>i like:</b> chatting in Discord, listening to <a href="/website/musicians" class="small">music</a>, composing stuffs in beepbox, <a href="/website/doodles" class="small">doodling things</a> and sometimes <a href="/website/words" class="small">writing</a>.</li>
+                <li><b>i like:</b> chatting in Discord, listening to <a href="/website/musicians">music</a>, composing stuffs in beepbox, <a href="/website/doodles">doodling things</a> and very rarely <a href="/website/words">writing</a>.</li>
             </ul></div>
             </div>
 
-        <p>I'm not that used to talking this much about myself but i'm gonna try.</p>
+        <p>I'm not that used to talking this much about myself but i'm gonna try.<br>
+        I go by cvni81 and this is my place where i do things.<br>
+        I have/had a lot of interests including but not limited to:<br>
+        Old television IDs, flags, design, collecting old coins, drawing, making things in blender, and probably
+        a bunch of other things i'm forgetting.<br>
+        Oh, and coding! (i'm doing it right now) I do a bunch of stuffs in python and pygame, maybe i'll put them here someday.<br>
+        My gender is weird so... non-binary<br>That's pretty much it.</p>
+        <div style="display: flex"><img src="misc/folder/images/dingus_attempts.jpg" alt="dingus attempts">
 
     </div></body>
 </html>
