--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <a href="/website/">go back</a>
         
         <div class="about">
-            <div style="display: flex"><img src="misc/folder/images/dingus.jpg" alt="dingus" style="align-self: center; border-radius: 100%"></div>
+            <div style="display: flex"><img src="misc/folder/images/dingus.png" alt="dingus" style="align-self: center; border-radius: 100%"></div>
             <div>
             <b>cvni81</b>
             <ul style="margin-top: 0px">
@@ -36,7 +36,7 @@
         a bunch of other things i'm forgetting.<br>
         Oh, and coding! (i'm doing it right now) I do a bunch of stuffs in python and pygame, maybe i'll put them here someday.<br>
         My gender is weird so... non-binary<br>That's pretty much it.</p>
-        <div style="display: flex"><img src="misc/folder/images/dingus_attempts.jpg" alt="dingus attempts">
+        <div style="display: flex"><img src="misc/folder/images/dingusattempts.png" alt="dingus attempts">
 
     </div></body>
 </html>
