fixed bottom image again

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
         a bunch of other things i'm forgetting.<br>
         Oh, and coding! (i'm doing it right now) I do a bunch of stuffs in python and pygame, maybe i'll put them here someday.<br>
         My gender is weird so... non-binary<br>That's pretty much it.</p>
-        <div style="display: flex"><img src="misc/folder/images/dingusattempts.png" alt="dingus attempts">
+        <img src="misc/folder/images/dingusattempts.png" alt="dingus attempts" style="margin: 0">
 
     </div></body>
 </html>
