--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
         <title>nowhere in particular</title><style>
+            h2{margin-bottom: 8px}
         </style></head>
 
     <body><div class="main">
