--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <details><summary><a>current status</a></summary>
             <div id="entry" style="margin: 8px 20px 16px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div></details>
 
-        <h2><a href="about" style="text-decoration: none;">about</a></h2>
+        <h2><a href="about" style="text-decoration: none; margin-top: 16px">about</a></h2>
         <h2><a href="blender" style="text-decoration: none;">blender</a></h2>
 
     </div></body>
