--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
+        <link rel="icon" type="image/x-icon" href="misc/folder/favicons/icon.jpg">
         <title>about me</title><style>
         img{margin: 20px auto}
         @media only screen and (min-width: 500px) {
