added blender favicon

--- a/blender.html
+++ b/blender.html
@@ -6,6 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="blender/style_dark.css" rel="stylesheet" type="text/css" media="all">
+        <link rel="icon" type="image/x-icon" href="misc/folder/favicons/cube.gif">
         <title>blender</title><style>
         </style></head>
     <body><div class="main">
