added shadow image

--- a/blender.html
+++ b/blender.html
@@ -23,5 +23,8 @@
         <ul>
             <li><h3><a href="blender/icossymetry">icossymetry</a> (40)</h3></li>
         </ul></div>
+
+        <img src="misc/folder/images/shadow.png" alt="shadow" style="margin: 0; max-width: 100%">
+
     </body>
 </html>
