made the shadow smaller

--- a/blender.html
+++ b/blender.html
@@ -22,9 +22,9 @@
         maybe these won't be the fastest loading times...</p>
         <ul>
             <li><h3><a href="blender/icossymetry">icossymetry</a> (40)</h3></li>
-        </ul></div>
-
-        <img src="misc/folder/images/shadow.png" alt="shadow" style="margin: 0; max-width: 100%">
-
+        </ul>
+    
+        <img src="misc/folder/images/shadow.png" alt="shadow" style="margin: 0; max-width: 100%; width: auto">
+    </div>
     </body>
 </html>
