moved blender to the blender uhh

--- a/blender/icossymetry.html
+++ b/blender/icossymetry.html
@@ -11,7 +11,7 @@
         </style></head>
     <body><div class="main">
         <h1>icossymetry</h1>
-        <a href="/website/blender">go back</a>
+        <a href="/website/blender/">go back</a>
         <p>This whole thing started when i wanted to recreate the floor pattern in this iconic maths video, 
             <a href="https://www.youtube.com/watch?v=4aN6vX7qXPQ">Not Knot</a> by the Geometry Center.
             I knew i couldn't really recreate it bc it was a hyperbolic tiling, but i still tried to do
