--- a/blender/index.html
+++ b/blender/index.html
@@ -5,7 +5,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
         <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="blender/style_dark.css" rel="stylesheet" type="text/css" media="all">
+        <link href="style_dark.css" rel="stylesheet" type="text/css" media="all">
         <link rel="icon" type="image/x-icon" href="misc/folder/favicons/cube.gif">
         <title>blender</title><style>
         </style></head>
@@ -21,7 +21,7 @@
         You can see how many images each page has next to the link, so if your internet isn't too good,
         maybe these won't be the fastest loading times...</p>
         <ul>
-            <li><h3><a href="blender/icossymetry">icossymetry</a> (40)</h3></li>
+            <li><h3><a href="blender/icossymetry/">icossymetry</a> (40)</h3></li>
         </ul>
     
         <img src="misc/folder/images/shadow.png" alt="shadow" style="margin: 0; max-width: 100%; width: auto">
