--- a/blender/index.html
+++ b/blender/index.html
@@ -21,10 +21,10 @@
         You can see how many images each page has next to the link, so if your internet isn't too good,
         maybe these won't be the fastest loading times...</p>
         <ul>
-            <li><h3><a href="blender/icossymetry/">icossymetry</a> (40)</h3></li>
+            <li><h3><a href="/icossymetry/">icossymetry</a> (40)</h3></li>
         </ul>
     
-        <img src="misc/folder/images/shadow.png" alt="shadow" style="margin: 0; max-width: 100%; width: auto">
+        <img src="/website/misc/folder/images/shadow.png" alt="shadow" style="margin: 0; max-width: 100%; width: auto">
     </div>
     </body>
 </html>
