added directories to misc

--- a/misc/index.html
+++ b/misc/index.html
@@ -12,7 +12,18 @@
 
     <body><div class="main">
         <h1>misc</h1>
-        <a href="/website/">go back</a>
         
+        <p>After stumbling your way into a door in the void, you go downstairs and
+           into the basement and find a green door with the words "only permitted personnel" scribbled over.<br>
+           Inside, the room is lit up by a monochromatic green light, it's kinda nauseating.<br>
+           There is a drawing table with a folder and a notebook; the wall besides it is worn and
+           covered with sticky notes.
+        </p>
+        <ul>
+            <li><h2><a href="journal">open the notebook</a></h2></li>
+            <li><h2><a href="wall">look at the sticky notes</a></h2></li>
+            <li><h2><a href="folder/">open the folder</a></h2></li>
+            <li><h2><a href="/website/">walk back out the door</a></h2></li>
+        </ul>
     </div></body>
 </html>
