--- a/misc/index.html
+++ b/misc/index.html
@@ -7,7 +7,7 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="style.css" rel="stylesheet" type="text/css" media="all">
         <link rel="icon" type="image/x-icon" href="misc/folder/favicons/misc.jpg">
-        <title>misc</title><style>
+        <title>> misc</title><style>
         </style></head>
 
     <body><div class="main">
