--- a/misc/index.html
+++ b/misc/index.html
@@ -8,6 +8,8 @@
         <link href="style.css" rel="stylesheet" type="text/css" media="all">
         <link rel="icon" type="image/x-icon" href="misc/folder/favicons/misc.jpg">
         <title>> misc</title><style>
+            li{font-size: 1.5rem}
+            li::before{content:""}
         </style></head>
 
     <body><div class="main">
@@ -20,10 +22,10 @@
            covered with sticky notes.
         </p>
         <ul>
-            <li><h2><a href="journal">open the notebook</a></h2></li>
-            <li><h2><a href="wall">look at the sticky notes</a></h2></li>
-            <li><h2><a href="folder/">open the folder</a></h2></li>
-            <li><h2><a href="/website/">walk back out the door</a></h2></li>
+            <li>> <a href="journal">open the notebook</a></li>
+            <li>> <a href="wall">look at the sticky notes</a></li>
+            <li>> <a href="folder/">open the folder</a></li>
+            <li>> <a href="/website/">walk back out the door</a></li>
         </ul>
     </div></body>
 </html>
