--- a/misc/index.html
+++ b/misc/index.html
@@ -8,8 +8,7 @@
         <link href="style.css" rel="stylesheet" type="text/css" media="all">
         <link rel="icon" type="image/x-icon" href="misc/folder/favicons/misc.jpg">
         <title>> misc</title><style>
-            li{font-size: 1.5rem}
-            li::before{content:""}
+            li{font-size: 1.5rem; font-weight: bold}
         </style></head>
 
     <body><div class="main">
@@ -22,10 +21,10 @@
            covered with sticky notes.
         </p>
         <ul>
-            <li>> <a href="journal">open the notebook</a></li>
-            <li>> <a href="wall">look at the sticky notes</a></li>
-            <li>> <a href="folder/">open the folder</a></li>
-            <li>> <a href="/website/">walk back out the door</a></li>
+            <li><a href="journal">open the notebook</a></li>
+            <li><a href="wall">look at the sticky notes</a></li>
+            <li><a href="folder/">open the folder</a></li>
+            <li><a href="/website/">walk back out the door</a></li>
         </ul>
     </div></body>
 </html>
