--- a/misc/index.html
+++ b/misc/index.html
@@ -9,6 +9,11 @@
         <link rel="icon" type="image/x-icon" href="misc/folder/favicons/misc.jpg">
         <title>> misc</title><style>
             li{font-size: 1.5rem; font-weight: bold}
+            div.indicator{content: url(misc/folder/images/dotdotdot.png); margin: 0 auto; display: block}
+            div.journal:hover ~ div.indicator{content: url(misc/folder/images/journal.png);}
+            div.notes:hover ~ div.indicator{content: url(misc/folder/images/notes.png);}
+            div.folder:hover ~ div.indicator{content: url(misc/folder/images/folder.png);}
+            div.exit:hover ~ div.indicator{content: url(misc/folder/images/exit.png);}
         </style></head>
 
     <body><div class="main">
@@ -21,10 +26,11 @@
            covered with sticky notes.
         </p>
         <ul>
-            <li><a href="journal">open the notebook</a></li>
-            <li><a href="wall">look at the sticky notes</a></li>
-            <li><a href="folder/">open the folder</a></li>
-            <li><a href="/website/">walk back out the door</a></li>
+            <li><a class="journal" href="journal">open the notebook</a></li>
+            <li><a class="notes" href="wall">look at the sticky notes</a></li>
+            <li><a class="folder" href="folder/">open the folder</a></li>
+            <li><a class="exit" href="/website/">walk back out the door</a></li>
         </ul>
+        <div class="indicator"></div>
     </div></body>
 </html>
