--- a/misc/index.html
+++ b/misc/index.html
@@ -9,11 +9,11 @@
         <link rel="icon" type="image/x-icon" href="misc/folder/favicons/misc.jpg">
         <title>> misc</title><style>
             li{font-size: 1.5rem; font-weight: bold}
-            div.indicator{content: url(misc/folder/images/dotdotdot.png); margin: 0 auto; display: block}
-            div.journal:hover ~ div.indicator{content: url(misc/folder/images/journal.png);}
-            div.notes:hover ~ div.indicator{content: url(misc/folder/images/notes.png);}
-            div.folder:hover ~ div.indicator{content: url(misc/folder/images/folder.png);}
-            div.exit:hover ~ div.indicator{content: url(misc/folder/images/exit.png);}
+            div.indicator{content: url(folder/images/dotdotdot.png); margin: 0 auto; display: block}
+            div.journal:hover ~ div.indicator{content: url(folder/images/journal.png);}
+            div.notes:hover ~ div.indicator{content: url(folder/images/notes.png);}
+            div.folder:hover ~ div.indicator{content: url(folder/images/folder.png);}
+            div.exit:hover ~ div.indicator{content: url(folder/images/exit.png);}
         </style></head>
 
     <body><div class="main">
