--- a/misc/index.html
+++ b/misc/index.html
@@ -10,10 +10,10 @@
         <title>> misc</title><style>
             li{font-size: 1.5rem; font-weight: bold}
             div.indicator{content: url(folder/images/dotdotdot.png); margin: 0 auto; display: block}
-            div.journal:hover ~ div.indicator{content: url(folder/images/journal.png);}
-            div.notes:hover ~ div.indicator{content: url(folder/images/notes.png);}
-            div.folder:hover ~ div.indicator{content: url(folder/images/folder.png);}
-            div.exit:hover ~ div.indicator{content: url(folder/images/exit.png);}
+            a.journal:hover ~ div.indicator{content: url(folder/images/journal.png);}
+            a.notes:hover ~ div.indicator{content: url(folder/images/notes.png);}
+            a.folder:hover ~ div.indicator{content: url(folder/images/folder.png);}
+            a.exit:hover ~ div.indicator{content: url(folder/images/exit.png);}
         </style></head>
 
     <body><div class="main">
