--- a/misc/index.html
+++ b/misc/index.html
@@ -26,10 +26,10 @@
            covered with sticky notes.
         </p>
         <ul>
-            <li><div class="journal"><a href="journal">open the notebook</a></li>
-            <li><div class="notes"><a href="wall">look at the sticky notes</a></li>
-            <li><div class="folder"><a href="folder/">open the folder</a></li>
-            <li><div class="exit"><a href="/website/">walk back out the door</a></li>
+            <li><div class="journal"><a href="journal">open the notebook</a></div></li>
+            <li><div class="notes"><a href="wall">look at the sticky notes</a></div></li>
+            <li><div class="folder"><a href="folder/">open the folder</a></div></li>
+            <li><div class="exit"><a href="/website/">walk back out the door</a></div></li>
         </ul>
         <div class="indicator"></div>
     </div></body>
