oops fixed links

--- a/misc/index.html
+++ b/misc/index.html
@@ -6,7 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="style.css" rel="stylesheet" type="text/css" media="all">
-        <link rel="icon" type="image/x-icon" href="misc/folder/favicons/misc.png">
+        <link rel="icon" type="image/x-icon" href="folder/favicons/misc.png">
         <title>> misc</title><style>
             .journal, .notes, .folder, .exit{font-size: 1.5rem; font-weight: bold}
             div.indicator{content: url(folder/images/dotdotdot.png); margin: 0 auto; display: block}
