added folder and images

--- a/misc/wall.html
+++ b/misc/wall.html
@@ -54,5 +54,6 @@
             <div>Thinking optional.</div>
             <div>We're feeling pretty loopy today huh?</div>
         </div>
+        <a href="#">back to top</a>
     </div></body>
 </html>
