--- a/misc/folder/index.html
+++ b/misc/folder/index.html
@@ -20,6 +20,17 @@
         <a href="/website/misc/">go back</a><br>
         <p>You open the folder to find... more folders. And a sticky note saying that the pages sometimes use other fonts and the ones that do have an asterisk (*) after them.</p>
 
+        <details><summary>html/css experiments/other pages</summary>
+            <ul>
+                <li><a href="other/difference">difference</a>: a thing about the importance of difference. Moved it here because it... doesn't really fit. (Also i keep having to change this page every time i change the design of the site.)</li>
+                <li><s><a href="other/blips">blips</a>*: short poems in pages that, though i like the vibe of them, they don't display properly on mobile.</s> to be updated!</li>
+                <li><a href="other/zine/0">nameless zine</a>: refer to <a href="journal#zine">journal entry</a>.</li>
+                <li><a href="other/nothing">unprobable blog</a>: the sole post in a blog i knew i wouldn't really keep posting on. so here it is.</li>
+                <li><a href="other/hi">hi</a>: hi</li>
+                <li><a href="other/ilo_katen">ilo Katen</a>: a toki pona diary entry thing from a future.</li>
+            </ul>
+        </details>
+
         <details><summary>miscellaneous images</summary>
             <ul>
                 <li><a href="images/nowhere1.gif">old button 1</a>: the old button that fit with the old dark style and font of the site.</li>
