--- a/misc/folder/index.html
+++ b/misc/folder/index.html
@@ -23,7 +23,7 @@
         <details><summary>html/css experiments/other pages</summary>
             <ul>
                 <li><a href="other/difference">difference</a>: a thing about the importance of difference. Moved it here because it... doesn't really fit. (Also i keep having to change this page every time i change the design of the site.)</li>
-                <li><s><a href="other/blips">blips</a>*: short poems in pages that, though i like the vibe of them, they don't display properly on mobile.</s> to be updated!</li>
+                <li><s style="text-decoration-color: var(--green)"><a href="other/blips">blips</a>*: short poems in pages that, though i like the vibe of them, they don't display properly on mobile.</s> to be updated!</li>
                 <li><a href="other/zine/0">nameless zine</a>: refer to <a href="journal#zine">journal entry</a>.</li>
                 <li><a href="other/nothing">unprobable blog</a>: the sole post in a blog i knew i wouldn't really keep posting on. so here it is.</li>
                 <li><a href="other/hi">hi</a>: hi</li>
