--- a/misc/folder/other/difference.html
+++ b/misc/folder/other/difference.html
@@ -6,43 +6,15 @@
         <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;650&display=swap" rel="stylesheet">
         <title>difference</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link rel="icon" type="image/x-icon" href="/website/misc/folder/favicons/icon.jpg">
+        <link href="/website/style.css" rel="stylesheet" type="text/css" media="all"><style>
         </style>
     </head>
 
-    <body>
-        <div class="sidebar">
-            <div>
-            <p><a href="/website/">home</a></p>
-            <ul>
-                <li><b>about</b></li>
-                <li><a href="/website/musicians">musicians</a></li>
-                <li><a href="/website/websites">websites</a></li>
-                <li><a href="/website/words">words</a></li>
-                <li><a href="/website/doodles">doodles</a></li>
-                <li><a href="/website/blender">blender</a></li>
-                <li><a href="/website/misc">misc</a></li>
-                <li><a href="/website/buttons">buttons</a></li>
-                <li><a href="/website/sitelog">sitelog</a></li>
-            </ul></div>
-        </div>
-        <div class="main">
+    <body><div class="cmain">
             
     <h1>about difference</h1>
-    
-        <details class="navbar">
-            <summary>back</summary>
-            <a href="/website/misc/folder">back to folder</a><br>
-            <b>about</b> . 
-            <a href="/website/musicians">musicians</a> . 
-            <a href="/website/websites">websites</a><br>
-            <a href="/website/words">words</a> . 
-            <a href="/website/doodles">doodles</a> . 
-            <a href="/website/blender">blender</a> . 
-            <a href="/website/misc">misc</a><br>
-            <a href="/website/buttons">buttons</a> . 
-            <a href="/website/sitelog">sitelog</a>
-        </details>
+    <a href="/website/misc/folder/">go back</a><br>
 
         <p>
             Difference is an important thing. It's what keeps the world going round, it gives life spice, it makes existing fun.
