added doodles to folder

--- a/misc/folder/index.html
+++ b/misc/folder/index.html
@@ -20,11 +20,33 @@
         <a href="/website/misc/">go back</a><br>
         <p>You open the folder to find... more folders. And a sticky note saying that the pages sometimes use other fonts and the ones that do have an asterisk (*) after them.</p>
 
+        <details><summary>handdrawn/doodles</summary>
+            When i originally made the handdrawn/doodles page, as the name suggested, everything was supposed to be handdrawn, even the text. But after trying to chroma key the text+drawings out (because i didn't want an ugly border in the images), 
+            once with black on white and then with black on green to see if it helped (it didn't, i suck at chroma key), i just gave up and had to settle for the separated text and drawing.
+            <ul>
+                <li><a href="doodles/original1.jpg">try #1</a></li>
+                <li><a href="doodles/original2.jpg">try #2</a></li>
+                <li>original <a href="doodles/handdrawn">{handdrawn}</a>* page (Might take a while to load because of the large images)</li>
+            </ul>
+            since everything else was handdrawn (except for the text), the buttons were also supposed to be handdrawn, but the contrast sucked (especially the etc button) so i scrapped it for pixel-y gifs, and changed the header accordingly. 
+            <ul>
+                <li><a href="doodles/people_button.jpg">people</a></li>
+                <li><a href="doodles/ruler_and_compass_button.jpg">ruler and compass</a></li>
+                <li><a href="doodles/etc_button.jpg">etc (the culprit)</a></li>
+            </ul>
+            Also, during the 5th redesign, i tried to remake the buttons to be much smaller and easier to see, but i couldn't make it work right so i kept the big buttons.
+            <ul>
+                <li><a href="doodles/people.gif">people</a></li>
+                <li><a href="doodles/rac.gif">ruler and compass</a> (recreation, i can't recover the original)</li>
+                <li><a href="doodles/etc.gif">etc</a></li>
+            </ul>
+        </details>
+
         <details><summary>html/css experiments/other pages</summary>
             <ul>
                 <li><a href="other/difference">difference</a>: a thing about the importance of difference. Moved it here because it... doesn't really fit. (Also i keep having to change this page every time i change the design of the site.)</li>
                 <li><s style="text-decoration-color: var(--green)"><a href="other/blips">blips</a>*: short poems in pages that, though i like the vibe of them, they don't display properly on mobile.</s> to be updated!</li>
-                <li><a href="other/zine/0">nameless zine</a>: refer to <a href="journal#zine">journal entry</a>.</li>
+                <li><a href="other/zine/0">nameless zine</a>: refer to <a href="/website/misc/journal#zine">journal entry</a>.</li>
                 <li><a href="other/nothing">unprobable blog</a>: the sole post in a blog i knew i wouldn't really keep posting on. so here it is.</li>
                 <li><a href="other/hi">hi</a>: hi</li>
                 <li><a href="other/ilo_katen">ilo Katen</a>: a toki pona diary entry thing from a future.</li>
