--- a/misc/folder/index.html
+++ b/misc/folder/index.html
@@ -20,6 +20,19 @@
         <a href="/website/misc/">go back</a><br>
         <p>You open the folder to find... more folders. And a sticky note saying that the pages sometimes use other fonts and the ones that do have an asterisk (*) after them.</p>
 
+        <details><summary>index(es)</summary>
+            <ul>
+                <li><a href="folder/indexes/index">index</a>*: the earliest version, with rounded corners.</li>
+                <li><a href="folder/indexes/index2">index2</a>*: a version with a sidebar and descriptions for pages.</li>
+                <li><a href="folder/indexes/index3">index3</a>*: a simpler version without a sidebar.</li>
+                <li><a href="folder/indexes/index4">index4</a>*: an even simpler version designed for mobile first.</li>
+                <li><a href="folder/indexes/index5">index5</a>*: a landing page that <i>then</i> led to the main index (index4).</li>
+                <li><a href="folder/indexes/building.png">building</a>: the first image i meant to put on the above welcome page.</li>
+                <li><a href="folder/indexes/index6">index6</a>: another version that i kinda honestly still like and probably will go back to.</li>
+                <li><a href="folder/indexes/index7">index7</a>: when i just gave up completely.</li>
+            </ul>
+        </details>
+
         <details><summary>handdrawn/doodles</summary>
             When i originally made the handdrawn/doodles page, as the name suggested, everything was supposed to be handdrawn, even the text. But after trying to chroma key the text+drawings out (because i didn't want an ugly border in the images), 
             once with black on white and then with black on green to see if it helped (it didn't, i suck at chroma key), i just gave up and had to settle for the separated text and drawing.
