--- a/misc/folder/index.html
+++ b/misc/folder/index.html
@@ -22,14 +22,14 @@
 
         <details><summary>index(es)</summary>
             <ul>
-                <li><a href="folder/indexes/index">index</a>*: the earliest version, with rounded corners.</li>
-                <li><a href="folder/indexes/index2">index2</a>*: a version with a sidebar and descriptions for pages.</li>
-                <li><a href="folder/indexes/index3">index3</a>*: a simpler version without a sidebar.</li>
-                <li><a href="folder/indexes/index4">index4</a>*: an even simpler version designed for mobile first.</li>
-                <li><a href="folder/indexes/index5">index5</a>*: a landing page that <i>then</i> led to the main index (index4).</li>
-                <li><a href="folder/indexes/building.png">building</a>: the first image i meant to put on the above welcome page.</li>
-                <li><a href="folder/indexes/index6">index6</a>: another version that i kinda honestly still like and probably will go back to.</li>
-                <li><a href="folder/indexes/index7">index7</a>: when i just gave up completely.</li>
+                <li><a href="indexes/index">index</a>*: the earliest version, with rounded corners.</li>
+                <li><a href="indexes/index2">index2</a>*: a version with a sidebar and descriptions for pages.</li>
+                <li><a href="indexes/index3">index3</a>*: a simpler version without a sidebar.</li>
+                <li><a href="indexes/index4">index4</a>*: an even simpler version designed for mobile first.</li>
+                <li><a href="indexes/index5">index5</a>*: a landing page that <i>then</i> led to the main index (index4).</li>
+                <li><a href="indexes/building.png">building</a>: the first image i meant to put on the above welcome page.</li>
+                <li><a href="indexes/index6">index6</a>: another version that i kinda honestly still like and probably will go back to.</li>
+                <li><a href="indexes/index7">index7</a>: when i just gave up completely.</li>
             </ul>
         </details>
 
