fixed up new old indexes

--- a/misc/folder/indexes/index7.html
+++ b/misc/folder/indexes/index7.html
@@ -28,5 +28,6 @@
         Patience is a virtue.</p><br>
         <img src="laydown.jpg" style="width: 400px; max-width: 100%">
 
+        <a href="/website/misc/folder/">go back to folder</a>
     </body>
 </html>
