--- a/misc/folder/indexes/index6.html
+++ b/misc/folder/indexes/index6.html
@@ -6,7 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;650&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>nowhere in particular</title>
-        <link href="styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="style4.css" rel="stylesheet" type="text/css" media="all"><style>
 
             a.buttons:hover{background-color: #7ba0cc; color: #101010; }
             a.misc:hover{background-color: #202020; color: #15c405}
@@ -44,15 +44,15 @@
             </div>
 
             <ul class="summary">
-                <li><a href="about"     title="me and what i like to do"            >about</a></li>
-                <li><a href="musicians" title="good music people"                   >musicians</a></li>
-                <li><a href="websites"  title="cool websites"       class="websites">websites</a></li>
-                <li><a href="words"     title="poems and texts and things"          >words</a></li>
-                <li><a href="doodles"   title="stuff i drew"                        >doodles</a></li>
-                <li><a href="blender"   title="3d renders in blender"               >blender</a></li>
-                <li><a href="misc"      title="general miscellanea" class="misc"    >misc</a></li>
-                <li><a href="buttons"   title="other folks' sites"  class="buttons" >buttons</a></li>
-                <li><a href="sitelog"   title="what's changed"      class="log"     >sitelog</a></li>
+                <li><a href="/website/about"     title="me and what i like to do"            >about</a></li>
+                <li><a href="/website/musicians" title="good music people"                   >musicians</a></li>
+                <li><a href="/website/websites"  title="cool websites"       class="websites">websites</a></li>
+                <li><a href="/website/words"     title="poems and texts and things"          >words</a></li>
+                <li><a href="/website/doodles"   title="stuff i drew"                        >doodles</a></li>
+                <li><a href="/website/blender"   title="3d renders in blender"               >blender</a></li>
+                <li><a href="/website/misc"      title="general miscellanea" class="misc"    >misc</a></li>
+                <li><a href="/website/buttons"   title="other folks' sites"  class="buttons" >buttons</a></li>
+                <li><a href="/website/sitelog"   title="what's changed"      class="log"     >sitelog</a></li>
             </ul>
 
     </body>
