added misc to main index!!

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="icon" type="image/x-icon" href="misc/folder/favicons/icon.jpg">
         <title>nowhere in particular</title><style>
             h2{margin: 0 0 8px}
+            a.misc:hover{background-color: #202020; color: #15c405}
         </style></head>
 
     <body><div class="main">
@@ -30,6 +31,7 @@
 
         <h2 style="margin-top: 16px"><a href="about" style="text-decoration: none; ">about</a></h2>
         <h2><a href="blender/" style="text-decoration: none;">blender</a></h2>
+        <h2><a class="misc" href="misc/" style="text-decoration: none;">misc</a></h2>
 
     </div></body>
 </html>
