added to top link and fixed some links in sitelog

--- a/sitelog.html
+++ b/sitelog.html
@@ -29,7 +29,7 @@
             in existence since july 2022<br>
             been through 7 (? idk anymore) redesigns<br>
             the general theme/objective for this is to try to do as much as possible with as little as possible, while still being kinda interesting. Idk if i succeeded h</details>
-    
+        <br>
         <div id="entry">
             <h2>14/6/2023 12:28</h2>
             <p>Started working on the website again a few days ago! Just finished the misc page and now the sitelog.</p> 
@@ -41,7 +41,7 @@
             <p>Changed half of the site fonts and some colors to Work Sans, will be done tomorrow (hopefully)</p> 
         </div><div id="entry">
             <h2>18/3/2023 22:06</h2>
-            <p>Changed the homepage back to the sidebar design and put <a href="misc/folder/index4">the old one</a> in the folder. Also added license info for the icons and fonts (in the "more about the site" dropdown)</p> 
+            <p>Changed the homepage back to the sidebar design and put <a href="misc/folder/indexes/index4">the old one</a> in the folder. Also added license info for the icons and fonts (in the "more about the site" dropdown)</p> 
         </div><div id="entry">
             <h2>14/3/2023 15:48</h2>
             <p>I added the sidebar back to (most) of the pages!</p> 
@@ -62,7 +62,7 @@
             <p>I moved the status.cafe thing to the index, where it always should have been.</p> 
         </div><div id="entry">
             <h2>14/12/2022 20:14</h2>
-            <p>I've added a new section called <a href="words/blips.html">blips</a>, for some shorter things I've written!</p> 
+            <p>I've added a new section called <a href="misc/folder/other/blips">blips</a>, for some shorter things I've written!</p> 
         </div><div id="entry">
             <h2>17/11/2022 21:31</h2>
             <p>Changed the doodles to get bigger when you hover over them!</p> 
@@ -157,6 +157,8 @@
             <h2>12/8/2022 17:42</h2>
             <p>I just added the <a href="blender">blender images</a> and now <a href="sitelog">this log</a> so i can keep better track of what i've added to the site. Also i feel like restructuring the site, the list format isn't working, i think.</p>
         </div>
+
+    <a href="#">back to top</a>
 
     </div></body>
 </html>
