added sitelog to main index!

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <title>nowhere in particular</title><style>
             h2{margin: 0 0 8px}
             a.misc:hover{background-color: #202020; color: #15c405}
+            a.log:hover{background-color: #202020; color: #ffa900}
         </style></head>
 
     <body><div class="main">
@@ -32,6 +33,7 @@
         <h2 style="margin-top: 16px"><a href="about" style="text-decoration: none; ">about</a></h2>
         <h2><a href="blender/" style="text-decoration: none;">blender</a></h2>
         <h2><a class="misc" href="misc/" style="text-decoration: none;">misc</a></h2>
+        <h2><a class="log" href="sitelog" style="text-decoration: none;">sitelog</a></h2>
 
     </div></body>
 </html>
