added message to index

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         There's nothing here right now, like there used to be.<br>
         The webmaster's not really feeling like putting it all back where it used to be so this is 
         more emphasis on the "nowhere" for now...<br>
-        But right now it's being used as a place for them to put some stuff they made in blender.<br>
+        <s>But right now it's being used as a place for them to put some stuff they made in blender</s> Ok we're putting more stuff here, slowly.<br>
         If you wanna check them out, that's cool. If you don't, that's cool too. Fair even.
         And if you want to contact the webmaster, here's their contacts. And their latest status.cafe too.</p>
         <details><summary><a>contacts</a></summary>
