--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
     <body><div class="main">
         <h1>nowhere in particular...</h1>
         <p>Oh hey, someone's here, welcome!<br>
-        There's nothing here right now, like there used to be.<br>
-        The webmaster's not really feeling like putting it all back where it used to be so this is 
-        more emphasis on the "nowhere" for now...<br>
+        This is a place the webmaster puts stuff about themselves, what they like and what they do...
+        Or at least what's here right now-<br>
         We're putting more stuff here, slowly; this place will be under construction for a bit.<br>
-        If you wanna check them out, that's cool. If you don't, that's cool too. Fair even.
+        If you wanna check some stuff out, that's cool. If you don't, that's cool too. Fair even.
         And if you want to contact the webmaster, here's their contacts. And their latest status.cafe too.</p>
         <details><summary><a>contacts</a></summary>
         <ul>
