--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 
             .about:hover::after{content: "(me and what i like to do)"}
 
+            .buttons:hover{background-color: #0b458e; color: #b8cadf}
+            .buttons:hover::after{content: "(other folks' sites)"}
+
             .log:hover{background-color: #ffa900; color: #0c0905}
             .log:hover::after{content: "(what's changed)"}
 
