--- a/sitelog.html
+++ b/sitelog.html
@@ -14,14 +14,14 @@
             --shadow: #543500;}
             #entry{margin-bottom: 40px;}
             h1{font-size: min(10vw, 3rem)}
-            h2{font-size: 1.25rem; margin-bottom: 0; display:flex; align-items: center;}
+            h2{display:flex; align-items: center;}
             h2::before{content:"> "; color: #835500; padding-right: 8px}
             p{margin-top: 8px}
             .after{background: linear-gradient(90deg, var(--text) 0%, var(--shadow) 100%);
                 flex: 1; margin-left: 8px; height: 1px}
         </style></head>
 
-    <body><div class="title">
+    <body><div class="ctitle">
         <h1>sitelog</h1>
         <a href="/website/">go back</a>
         <div style="width: auto; background: var(--text); height: 1px; margin-top: 16px"></div></div>
