--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@900&display=swap&text=nowhereinparticular" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="style.css" rel="stylesheet" type="text/css" media="all">
-        <link rel="icon" type="image/x-icon" href="misc/folder/favicons/icon.jpg">
+        <link rel="icon" type="image/x-icon" href="images/icon.jpg">
         <title>nowhere in particular</title><style>
             body{--back: #faf9ff;
                 --text: #001a43;
@@ -22,7 +22,8 @@
             .info details{padding-bottom: 8px}
             .summary{padding: 0 24px; margin: 48px; font-size: 2rem}
 
-            .summary a{text-decoration: none}.info{width:400px}
+            .summary a{text-decoration: none; color: var(--text)}
+            .info{width:400px}
 
             #entry{color: #410001;} 
             #entry a{color:#c0000c} 
