--- a/sitelog.html
+++ b/sitelog.html
@@ -6,7 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@450;700&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="style.css" rel="stylesheet" type="text/css" media="all">
-        <link rel="icon" type="image/x-icon" href="misc/folder/favicons/icon.jpg">
+        <link rel="icon" type="image/x-icon" href="images/logicon.jpg">
         <title>sitelog</title><style>
             body {--back: #0c0905;
             --text: #ffa900;
