--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@450;700&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="style.css" rel="stylesheet" type="text/css" media="all">
+        <link rel="icon" type="image/x-icon" href="images/abouticon.jpg">
         <title>about me</title><style>
         body{--back: #fcfcfc;
         --text: #1b1b1b;
