--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             .summary{padding: 0 24px; margin: 48px; font-size: 2rem}
 
             .summary a{text-decoration: none; color: var(--text)}
+            .summary a:hover{color: var(--back)}
             .info{width:400px}
 
             #entry{color: #410001;} 
