--- a/sitelog.html
+++ b/sitelog.html
@@ -35,6 +35,9 @@
             And old web aesthetic (?) with cool fonts. Idk if i succeeded h</details>
         <br>
         <div id="entry">
+            <h2>28/6/2023 21:44<div class="after"></div></h2>
+            <p>Added about, button and 404 pages.</p> 
+        </div><div id="entry">
             <h2>28/6/2023 19:14<div class="after"></div></h2>
             <p>Started <b>another</b> redesign, with just the index, the status.cafe and this sitelog.</p> 
         </div><div id="entry">
