fixed zenmai button

--- a/buttons/index.html
+++ b/buttons/index.html
@@ -45,7 +45,7 @@
         <a class="button" href="https://jmibo.neocities.org/"><img src="https://jmibo.neocities.org/assets/button.png"></a> 
         <a href="https://kpwu.xyz/" class="button"><img id="button_self" src="https://kpwu.xyz/images/kpwu_button.png" alt="kpwu button"></a>
         <h2>other neat places</h2>
-        <a href="https://zenmai.neocities.org/" class="button" ><img src="https://zenmai.neocities.org/image/banner.png" alt="zenmai"></a><br>
+        <a href="https://zenmai.neocities.org/" class="button" ><img src="zenmai.png" alt="zenmai"></a><br>
         <a href="https://worldendling.neocities.org/" class="button"><img width="88" height="31" src="worldendling.gif" alt="worldendling"></a>
         <a href="https://moondvsted.neocities.org/" class="button"><img src="https://f2.toyhou.se/file/f2-toyhou-se/images/47052159_rd5iWTFAMmQWrMr.gif"></a>
         <a href="https://telepoet.neocities.org/" class="button"><img src="https://telepoet.neocities.org/images/buttons/telepoet8831.gif" alt="TELEPOET"></a> 
