changed about link hover color

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             /*- Details about each page -*/
             li a:hover::after{margin-left: 8px; font-size: 1.5rem;}
 
+            a.about:hover{background-color: #1b1b1b; color: #fcfcfc}
             .about:hover::after{content: "(me and what i like to do)"}
 
             a.buttons:hover{background-color: #0b458e; color: #b8cadf}
